S-133408: Add program reconciliation API
